--- a/templates/service/404.phtml
+++ b/templates/service/404.phtml
@@ -3,9 +3,9 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title>Error: 404 Not Found</title>
+    <title>404 Not Found</title>
 </head>
 <body>
-Error: 404 Not Found
+404 Not Found
 </body>
 </html>
