Handle http errors

--- a/templates/service/error.phtml
+++ b/templates/service/error.phtml
@@ -1,11 +1,10 @@
-<?php http_response_code(404); ?>
 <!doctype html>
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title>404 Not Found</title>
+    <title><?=$error?></title>
 </head>
 <body>
-404 Not Found
+<?=$error?>
 </body>
 </html>
