--- a/templates/sample/main.twig
+++ b/templates/sample/main.twig
@@ -2,9 +2,9 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title><?=hte($title)?></title>
+    <title>{{  title }}</title>
 </head>
 <body>
-    <?=hte($text)?>
+    {{ text }}
 </body>
 </html>
