--- a/templates/service/error.twig
+++ b/templates/service/error.twig
@@ -2,9 +2,9 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title><?=$error?></title>
+    <title>{{ code }}: {{  message }}</title>
 </head>
 <body>
-<?=$error?>
+{{ code }}: {{ message }}
 </body>
 </html>
